--- a/app/views/admins/articles/_article_member_name.html.erb
+++ b/app/views/admins/articles/_article_member_name.html.erb
@@ -1,3 +1,7 @@
-<%= f.hidden_field :id %>
+<%
+=begin%>
+ <%= f.hidden_field :id %>
 <%= f.collection_select :member_id, f.object.article_members, :id, :name %>
-<%= link_to "削除", method: :delete %>
+<%= link_to "削除", method: :delete %> 
+<%
+=end%>
