--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,31 +1,26 @@
-<h1>SixTones 詳細画面</h1>
-<p>値段ブランドtwitterへのリンクをご紹介します。</p>
-
-<h2>着用メンバー</h2>
-<% member_ids = @article.member_ids%>
-<% member_ids.each do |member_id|%>
-<% member = Member.find(member_id)%>
-<P><%= member.name%>さん</P>
-<% end %>
-<h2>ブランド</h2>
-<p><%= @article.brand %></p>
-<h2>価格</h2>
-<p><%= @article.price %></p>
-
-<h2>画像(詳しくはTwitterをご覧ください。)</h2>
-<% if @article.images.attached? %>
-<% @article.images.each do |image| %>
-<%= image_tag image %>
-<% end %>
-<% end %>
-
-<%= link_to "Twitterはこちら", @article.tweet_url%>
-
-
-
-<% if logged_in? %> 
-<% if current_user.admin? %>
-<%= link_to "編集", edit_admins_article_path(@article.id) %>
-
-<% end %>
-<% end %>
+<div class = "content">
+  <div class="card border-white border-1 rounded-0 text-dark bg-white pt-3 pb-5 mx-auto mt-5 mb-3" style="width: 100%; height: 100%;">
+    <% names = [] %>
+    <% @article.members.each do |member|%>
+      <% names.push(member.name) %>
+      <div class="card-body mt-3">
+        <div class="card-body-text mb-5 text-center">
+          <h5 class="card-title"><%= "#{names.join("さん")}さん" %></h5>
+          <p class="card-text"><%= "<Brand>#{@article.brand}" %></p>
+          <p class="card-text"><%= "<Price>      #{@article.price}" %></p>
+          <p class="card-text"><%= "<Item>      #{@article.item}" %></p>
+          <%= link_to "詳しくはTweetをご覧ください", @article.tweet_url, class: "btn btn-outline-light border-dark border-1 rounded-0 text-dark " %>
+        </div>
+        <div class="row justify-content-center">
+          <% if @article.images.present? %>
+            <% @article.images.each do |article_image| %>
+              <div class="col-md-5 col-sm-12 mx-4 py-4">
+                <%= image_tag article_image, class: "card-img-top", alt: "Card image cap" %>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
