--- a/app/views/layouts/_search_form.html.erb
+++ b/app/views/layouts/_search_form.html.erb
@@ -1,8 +1,10 @@
+<div class = "search mx-auto py-4">
 <%= search_form_for @q, url: search_articles_path do |f| %> 
 <%= f.label :brand_cont , "ブランド" %>
-<%= f.search_field :brand_cont, placeholder: "ブランドを検索" %>  
+<%= f.search_field :brand_cont, class: "btn btn-outline-light rounded-0" %>  
 <%= f.label :members_name_cont , "メンバー" %>
-<%= f.search_field :members_name_cont, placeholder: "メンバーを検索" %> 
-<%= f.submit "検索"%>
+<%= f.search_field :members_name_cont, class: "btn btn-outline-light rounded-0" %> 
+<%= f.submit "検索", class: "btn btn-outline-light"%>
 <% end %>
+</div>
 
