--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,8 +1,12 @@
-<h1>間違い報告画面</h1>
-<p>記事について間違い等あればコメントください。</p>
-
-<%= form_with model: @report, local: true do |f| %>
-<h2>コメント</h2>
-<%= f.text_area :comment, placeholder: "コメントください。" %>
-<%= f.submit '報告する' %>
-<% end %>
+<div class = "content">
+  <div class="mb-3">
+    <%= form_with model: @report, local: true do |f| %>
+      <%= f.label :comment, "Report", class: "form-label fs-3 mb-4" %>
+      <p>記事や通知に間違い等あればこちらからコメントしてください。<br>メンバー名など細かく記入して頂けますとスムーズに対応させていただくことが可能です。</p>
+      <%= f.text_area :comment, placeholder: "例)京本くんの最新の記事のブランド名が間違っています。", class: "form-control py-3 mt-5 mb-5 bg-white border-white border-1 rounded-0 text-dark", rows: "6"%>
+      <div class = "text-center">
+        <%= f.submit '送信', class: "btn btn-outline-light" %>
+      </div>
+    <% end %>
+  </div>
+</div>
