--- a/app/views/articles/home.html.erb
+++ b/app/views/articles/home.html.erb
@@ -1,6 +1,6 @@
 <div class= "content mt-5"> 
   <div class = "introduce text-center">
-  <h3>こんにちは<br>SixTONESの私物の特定ツイートを通知するサービスをご提供しています</h3>
+  <h3>こんにちは<br>SixTONESの私物の特定ツイートを通知するサービスをご提供します</h3>
   <div class = "introduce-btns mt-5 py-4">
   <%= link_to "私物一覧はこちらから", articles_path, class: "btn btn-outline-light me-4"%>
   <%= link_to "間違いにお気づきの方はこちらから", new_report_path, class: "btn btn-outline-light" %>
