--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,12 @@
  */
  @import "bootstrap";
 
+ .notification{
+  background-color: #999999;
+  color: white;
+  font-size: 1rem;
+}
+
  body{
    margin: 0;
    background: #111111;
