--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FindGoodsOfStan2</title>
+    <title>FindGoodsOfStan</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= favicon_link_tag '/line_top.jpg' %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
   <body>
+    <%= render partial: 'layouts/flash' %>
     <%= render 'layouts/header' %>
     <div class="container">
       <%= yield %>
