--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :new_report %>
 <div class = "content">
   <div class="mb-3">
     <%= form_with model: @report, local: true do |f| %>
