--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :articles, class: "logo" %>
 <div class = "content">
   <div class="row justify-content-center pt-3 pb-5">
     <% @articles.each do |article| %>
