--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :article_show, @article %>
 <div class = "content">
   <div class="card border-white border-1 rounded-0 text-dark bg-white pt-3 pb-5 mx-auto mt-5 mb-3" style="width: 100%; height: 100%;">
     <% names = [] %>
